# MicroRTS-Py

./: .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  build.sh  evaluation.bash  hello_world.py  hello_world_bot.py  hello_world_pettingzoo.py  hello_world_po.py  hello_world_record_video.py  hello_world_v2.py  hello_world_v3.py  jtest.py  max_reward.py  monitor.py  new_hello_world.py  pyproject.toml  setup.cfg  setup.py  setup_nightly.py  test.py  test_cnn.py  test_individual.py  test_param_op.py  test_resume.sh  wandb_plot.py
.github/workflows/: pre-commit.yml  pypi.yml  tests.yml
PCG/: README.md  pcg.py
PCG/maps/: filename.xml  wall-1
benchmark/: generate_exp.sh  jobs.sh  resume.py  resume.sh  submit_exp.sh  test_resume.sh
benchmark/scripts/: ppo_autoregressive1.sh  ppo_autoregressive2.sh  ppo_autoregressive3.sh
docker/: Dockerfile  all.sh  aws.py  build.sh  docker.py  docker.sh  entrypoint.sh  setup.py  sharedmemory.Dockerfile  sharedmemory_entrypoint.sh
experiments/: POagent.pt  POagent_multiple_maps.pt  a2c.py  a2c_discrete.py  a2c_hrl_kl_impotrance.py  agent.pt_  agent_sota.pt  bdqm4x4.py  bdqn.py  bdqn4x4.py  cleanrl_a2c.py  cleanrl_a2c_cnn_mask_24.py  cleanrl_a2c_hrl.py  cleanrl_a2c_hrl_fixed.py  cleanrl_a2c_hrl_kl.py  cleanrl_a2c_hrl_old.py  cleanrl_a2c_mask.py  cleanrl_dqn.py  cleanrl_ppo.py  evaluation.py  final.csv  league.csv  league.db  league.db.backup  league.py  league.temp.csv  league_alphastar.yaml  league_openfive.yaml  match_league.py  new_league.py  new_ppo2.py  new_ppo_gridnet.py  new_ppo_gridnet_eval.py  oai5.py  plotting.py  po_league.csv  po_league.db  policy_gradient.py  ppo.py  ppo2.py  (+48 more)
experiments/action_masks/: a2c_expert.py  a2c_logits_add_mask.py  a2c_logits_mask.py  a2c_no_logits_mask.py  a2c_no_mask.py
experiments/debug/: cleanrl_a2c_cnn_mask_debug.py  evaluation_debug.py
gym_microrts/: __init__.py  _version.py  microrts_ai.py  microrts_maps.py  petting_zoo_api.py  types.py  v1.py  v2.py  v3.py  v4.py
old_tests/: test_attack_reward.py  test_binary_reward.py  test_categorical_mask.py  test_multiple_actions.py  test_produce_buildings_reward.py  test_resource_gather_reward.py
perf/: build.sh  run_benchmark.py
tests/: generate_expert.py  hello_world_bot.py  jtest.py  test.sh  test_HRL_reward.py  test_action_rewards.py  test_attack_reward.py  test_binary_reward.py  test_closer_to_enemy_base_reward.py  test_e2e.py  test_mask.py  test_observation.py  test_pettingzoo_api.py  test_produce_buildings.py  test_produce_buildings_reward.py  test_produce_combat_unit_reward.py  test_produce_worker_reward.py  test_resource_gather_reward.py  test_reward.py
(+118 files in other folders)
