[tool.poetry]
name = "gym-microrts"
version = "0.0.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.18.3"
JPype1 = "^1.3.0"
torch = "1.7.1"

[tool.poetry.dev-dependencies]
poetry-dynamic-versioning = "^0.13.0"
spyder = "^5.0.5"
tensorboard = "^2.5.0"
wandb = "^0.10.33"
trueskill = "^0.4.5"
stable-baselines3 = "^1.1.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

