[tool.poetry]
name = "gym-microrts"
version = "0.0.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
exclude = [
    "gym_microrts/microrts/build/*",
    "gym_microrts/microrts/resources",
    "gym_microrts/microrts/src",
    "gym_microrts/microrts/data",
    "gym_microrts/microrts/lib/*.jar",
]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.18.3"
JPype1 = "^1.3.0"
spyder = {version = "^5.1.5", optional = true}
peewee = "^3.14.8"

[tool.poetry.dev-dependencies]
poetry-dynamic-versioning = "^0.13.0"
tensorboard = "^2.5.0"
wandb = "^0.11.0"
trueskill = "^0.4.5"
stable-baselines3 = "^1.1.0"
torch = "1.7.1"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
spyder = ["spyder"]