[tool.poetry]
name = "gym-microrts"
version = "0.0.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
exclude = [
    "gym_microrts/microrts/build/*",
    "gym_microrts/microrts/resources",
    "gym_microrts/microrts/src",
    "gym_microrts/microrts/data",
    "gym_microrts/microrts/lib/*.jar",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
gym = "^0.21.0"
JPype1 = "^1.3.0"
peewee = "^3.14.8"
spyder = {version = "^5.1.5", optional = true}
cleanrl = {version = "0.5.0.dev6", optional = true, extras = ["cloud"]}

[tool.poetry.dev-dependencies]
poetry-dynamic-versioning = "^0.13.0"
tensorboard = "^2.5.0"
wandb = "^0.12.1"
trueskill = "^0.4.5"
stable-baselines3 = "^1.1.0"
torch = "1.7.1"
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
spyder = ["spyder"]
cleanrl = ["cleanrl"]
